Fix command panel spacing

--- a/src/Savings.SPA/wwwroot/css/savings.css
+++ b/src/Savings.SPA/wwwroot/css/savings.css
@@ -31,6 +31,10 @@
     color: #0159cc;
 }
 
+.cmd-panel {
+    margin-top: 15px;
+}
+
 /*Projection*/
 #history tbody > tr > :nth-child(4), thead > tr > :nth-child(4) {
     border-right: 1px solid #b2b2b2;
